--- a/about.html
+++ b/about.html
@@ -25,6 +25,10 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/b755137e72.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
