add linkedin icon

--- a/about.html
+++ b/about.html
@@ -67,6 +67,8 @@
         <a href="/mailto:anilatta19@gmail.com" class="email-link">
           Talina Dzhavakhadze
         </a>
+        <br />
+        <i class="fa-brands fa-linkedin"></i>
       </div>
     </div>
   </body>
