--- a/index.html
+++ b/index.html
@@ -32,6 +32,37 @@
   </head>
   <body>
     <div class="container">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Talina Dzhavakhadze</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html#contact">Contact me</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <h2>Hi🙋‍♀️ I am</h2>
       <h1>Talina <span class="lastname">Dzhavakhadze</span></h1>
       <h3>Таліна Джавахадзе</h3>
