--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           </div>
         </div>
       </nav>
+      <div class="hero">
       <h2>Hi🙋‍♀️ I am</h2>
       <h1>Talina <span class="lastname">Dzhavakhadze</span></h1>
       <h3>Таліна Джавахадзе</h3>
@@ -75,5 +76,7 @@
         <a href="/about.html" class="about-link">About me</a>
       </div>
     </div>
+    </div>
+    </body>
   </body>
 </html>
