--- a/about.html
+++ b/about.html
@@ -50,22 +50,20 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
-                  >Home</a
-                >
+                <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">About me</a>
+                <a class="nav-link active" href="/about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html#contact">Contact me</a>
+                <a class="nav-link" href="/about.html#contact">Contact me</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       <h1>About me</h1>
-      <h3>Front-end developer, from Ukraine, based in Munich.</h3>
+      <h4>Front-end developer, from Ukraine, based in Munich.</h4>
       <div class="about-paragraphs">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
