making about page

--- a/about.html
+++ b/about.html
@@ -62,8 +62,32 @@
           </div>
         </div>
       </nav>
-      <h1>About me</h1>
-      <h4>Front-end developer, from Ukraine, based in Munich.</h4>
+      <div class="about-hero container">
+        <h1>Hi🌺I'm Talina Dzhavakhadze</h1>
+        <h4>Front-end developer, from Ukraine, based in Munich.</h4>
+        <div class="row">
+          <div class="col-lg-6">
+            <p>
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus
+            </p>
+            <div class="mt-5 mb-5">
+              <a href="#" class="primary-link-button">See my works</a>
+            </div>
+            <p>
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img src="/images/avatar.jpg" alt class="image-fluid" />
+          </div>
+        </div>
+      </div>
       <div class="about-paragraphs">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
