add some text to about

--- a/about.html
+++ b/about.html
@@ -64,23 +64,22 @@
       </nav>
       <div class="about-hero container">
         <h1>Hi🌺I'm Talina Dzhavakhadze</h1>
-        <h4>Front-end developer, from Ukraine, based in Munich.</h4>
+        <h4>Front-End Developer, from Ukraine, based in Munich.</h4>
         <div class="row">
           <div class="col-lg-6">
             <p>
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              As a Front-End Developer I can create website or application using
+              web languages such as HTML, CSS, and JavaScript that allow you as
+              a user to access and interact with them.
             </p>
             <div class="mt-5 mb-5">
               <a href="#" class="primary-link-button">See my works</a>
             </div>
             <p>
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I am a swithcher from the P2P work to QA and coding doing all the
+              best in || studing at SheCodes and BitDegree Front-End Develompent
+              and Web Design classes and doing some freelance QA work at Utest
+              and Ubertesters.
             </p>
           </div>
           <div class="col-lg-6">
