--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1>Talina <span class="lastname">Dzhavakhadze</span></h1>
       <h3>Таліна Джавахадзе</h3>
       <h5>
-        <span class="skills">Front-end developer</span>, from Ukraine 💙💛
+        <span class="skills">Front-End Developer</span>, from Ukraine 💙💛
         
       </h5>
       <div class="navigation-links">
