--- a/about.html
+++ b/about.html
@@ -76,10 +76,10 @@
               <a href="#" class="primary-link-button">See my works</a>
             </div>
             <p>
-              I am a swithcher from the P2P work to QA and coding doing all the
+              I am a swithcher from the P2P work to QA and Coding, doing all the
               best in || studing at SheCodes and BitDegree Front-End Develompent
-              and Web Design classes and doing some freelance QA work at Utest
-              and Ubertesters.
+              and Web Design classes and making freelance QA work at Utest and
+              Ubertesters.
             </p>
           </div>
           <div class="col-lg-6">
