--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <div class="container">
       <nav class="navbar fixed-top navbar-expand-lg navbar-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Talina Dzhavakhadze</a>
+          <a class="navbar-brand" href="/">Talina Dzhavakhadze</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -56,7 +56,7 @@
                 <a class="nav-link active" href="/about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html#contact">Contact me</a>
+                <a class="nav-link" href="/work.html">My works</a>
               </li>
             </ul>
           </div>
@@ -73,7 +73,7 @@
               a user to access and interact with them.
             </p>
             <div class="mt-5 mb-5">
-              <a href="#" class="primary-link-button">See my works</a>
+              <a href="/work.html" class="primary-link-button">See my works</a>
             </div>
             <p>
               I am a swithcher from the P2P work to QA and Coding, doing all the
