--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
-   <div class="container">
+    <div class="container">
       <nav class="navbar fixed-top navbar-expand-lg navbar-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Talina Dzhavakhadze</a>
@@ -52,7 +52,7 @@
                 <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/about.html">About me</a>
+                <a class="nav-link" href="/about.html">About me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="/work.html">My works</a>
@@ -61,8 +61,37 @@
           </div>
         </div>
       </nav>
-    <div class="about-hero container">
+      
         <h1>Hi🌺I'm Talina Dzhavakhadze</h1>
-        <h4>Front-End Developer, from Ukraine, based in Munich.</h4>
+        <h4>
+          Take a look at what I've been working on during the study at SheCodes!
+        </h>
+      
+      <div class="work-container">
+<div class="row">
+     <div class="col mt-4 mb-4">
+            <img src="/images/Stand with Ukraine.png" class="img-fluid mb-3 rounded" alt="">
+            <h3 class="text-center m-0">Stand with Ukraine Project</h3>
+            <p class="skills ">Built with HTML and CSS</p>
+          </div>
+           </div>
+           <div class="row">
+                    <div class="col-md-6 mb-4">
+            <img src="/images/weather1.png" class="img-fluid mb-3 rounded" alt="">
+            <h3 class="text-center m-0">Weather1 Project</h3>
+            <p class="skills ">
+              Built with HTML, CSS and JavaScript
+            </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="/images/weather2.png" class="img-fluid mb-3 rounded" alt="">
+            <h3 class="text-center m-0">Weather2 Project</h3>
+            <p class="skills" >
+              Built with HTML, CSS and JavaScript.
+            </p>
+          </div>
+                   </div>
+        </div>
+        </div>
   </body>
 </html>
