contact page built

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact me</title>
+    <!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,8 +37,9 @@
     ></script>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body>
-    <div class="container">
+</head>
+<body>
+     <div class="container">
       <nav class="navbar fixed-top navbar-expand-lg navbar-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Talina Dzhavakhadze</a>
@@ -55,46 +63,14 @@
                 <a class="nav-link" href="/about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/work.html">My works</a>
+                <a class="nav-link" href="/work.html">My works</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link active" href="/contact.html">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      
-        <h1>Hi🌺I'm Talina Dzhavakhadze</h1>
-        <h4>
-          Take a look at what I've been working on during the study at SheCodes!
-        </h>
-      
-      <div class="work-container">
-<div class="row">
-     <div class="col mt-4 mb-4">
-            <img src="/images/Stand with Ukraine.png" class="img-fluid mb-3 rounded" alt="">
-            <h3 class="text-center m-0">Stand with Ukraine Project</h3>
-            <p class="skills ">Built with HTML and CSS</p>
-          </div>
-           </div>
-           <div class="row">
-                    <div class="col-md-6 mb-4">
-            <img src="/images/weather1.png" class="img-fluid mb-3 rounded" alt="">
-            <h3 class="text-center m-0">Weather1 Project</h3>
-            <p class="skills ">
-              Built with HTML, CSS and JavaScript
-            </p>
-          </div>
-          <div class="col-md-6 mb-4">
-            <img src="/images/weather2.png" class="img-fluid mb-3 rounded" alt="">
-            <h3 class="text-center m-0">Weather2 Project</h3>
-            <p class="skills" >
-              Built with HTML, CSS and JavaScript.
-            </p>
-          </div>
-                   </div>
-        </div>
-        </div>
-  </body>
+</body>
 </html>
