contact page built

--- a/contact.html
+++ b/contact.html
@@ -72,5 +72,20 @@
           </div>
         </div>
       </nav>
+      <h1>Hi🙋‍♀️I'm Talina Dzhavakhadze</h1>
+        <h4>
+          Let's get in touch!
+        </h>
+         <div class="contact" id="contact">
+        <h2>📮 E-mail me: anilatta19@gmail.com</h2>
+        <a href="/mailto:anilatta19@gmail.com" class="email-link">
+          Talina Dzhavakhadze
+        </a>
+        <br />
+        
+        <a href="https://www.linkedin.com/in/talina-dzhavakhadze-6aa3ba4/" target="_blank"><i class="fa-brands fa-linkedin"></i>
+            </a>
+                
+      </div>
 </body>
 </html>
