--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
         </div>
       </nav>
       
-        <h1>Hi🌺I'm Talina Dzhavakhadze</h1>
+        <h1>Hi🙋‍♀️I'm Talina Dzhavakhadze</h1>
         <h4>
           Take a look at what I've been working on during the study at SheCodes!
         </h>
