--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         </div>
       </nav>
       <div class="about-hero container">
-        <h1>Hi🌺I'm Talina Dzhavakhadze</h1>
+        <h1>Hi🙋‍♀️I'm Talina Dzhavakhadze</h1>
         <h4>Front-End Developer, from Ukraine, based in Munich.</h4>
         <div class="row">
           <div class="col-lg-6">
