--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         </h>
          <div class="contact" id="contact">
         <h2>📮 E-mail me: anilatta19@gmail.com</h2>
-        <a href="/mailto:anilatta19@gmail.com" class="email-link">
+        <a href="mailto:anilatta19@gmail.com" class="email-link">
           Talina Dzhavakhadze
         </a>
         <br />
