--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
       </div>
       <div class="contact" id="contact">
         <h2>📮 Contact me</h2>
-        <a href="/mailto:anilatta19@gmail.com" class="email-link">
+        <a href="mailto:anilatta19@gmail.com" class="email-link">
           Talina Dzhavakhadze
         </a>
         <br />
