--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
      <div class="container">
       <nav class="navbar fixed-top navbar-expand-lg navbar-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Talina Dzhavakhadze</a>
+          <a class="navbar-brand" href="/"title="Talina's Homepage">Talina Dzhavakhadze</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -57,16 +57,16 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
+                <a class="nav-link" aria-current="page" href="/"title="Talina's Homepage">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About me</a>
+                <a class="nav-link" href="/about.html"title="About Talina">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/work.html">My works</a>
+                <a class="nav-link" href="/work.html"title="Talina's Works">My works</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/contact.html">Contact</a>
+                <a class="nav-link active" href="/contact.html"title="Contact Talina">Contact</a>
               </li>
             </ul>
           </div>
