adding link to github

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <i class="fa-solid fa-id-card fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;"></i>
             </a>
             </div> 
-            <p>This project was coded by Talina Dzhavakhadze, and it is open-sourced.</p>
+            <p>This project was coded by Talina Dzhavakhadze, and it is <a href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"class="text-decoration-none"target="_blank">open-sourced</a>.</p>
         </footer>
       </div>
   </body>
