Footer styling and about contecst adding

--- a/about.html
+++ b/about.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About me</title>
+    <meta
+      name="description"
+      content="About Talina Dzhavakhadze- a front-end developer based in Munich, DE."
+    />
+    <title>About me-TD</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&family=Roboto+Mono:ital,wght@1,500&family=Rubik+Moonrocks&display=swap"
@@ -106,34 +110,31 @@
             </p>
           </div>
           <div class="col-lg-6">
-            <img src="/images/avatar.jpg" alt class="image-fluid" />
+            <img
+              src="/images/avatar.jpg"
+              alt="Talina Dzhavakhadze"
+              class="image-fluid"
+            />
           </div>
         </div>
       </div>
       <div class="about-paragraphs">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-          blanditiis harum.
-          <br />
-          <br />
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-          blanditiis harum.
+          My new usefull Front-End Developer's skills
+          <img
+            src="/images/Learned at SheCodes.png"
+            alt="Learned at SheCodes"
+          />
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-          blanditiis harum.
+          Languages we can communicate🔊
           <br />
+          Native or bilingual proficiency: Ukrainian,Russian.
           <br />
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-          blanditiis harum.
+          Professional working proficiency: English.
+          <br />
+          Elementary proficiency: German,Bulgarian,Czech.
+          <br />
         </p>
       </div>
       <div class="contact" id="contact">
@@ -141,9 +142,70 @@
         <a href="mailto:anilatta19@gmail.com" class="email-link">
           Talina Dzhavakhadze
         </a>
-        <br />
-        <i class="fa-brands fa-linkedin"></i>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between d-none d-md-flex">
+          <div>
+            <h1>Work Inquiry:</h1>
+            <h3>Let's work together!</h3>
+          </div>
+          <div class="mt-4">
+            <a
+              href="/contact.html"
+              class="primary-link-button"
+              title="Contact Talina"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <a
+          href="mailto:anilatta19@gmail.com"
+          class="email-link"
+          title="Email Talina"
+          >anilatta19@gmail.com</a
+        >
+
+        <div class="social-links mt-5 mb-5">
+          <a
+            href="https://www.linkedin.com/in/talina-dzhavakhadze-6aa3ba4/"
+            target="_blank"
+            title="LinkedIn Profile"
+            ><i
+              class="fa-brands fa-linkedin fa-beat"
+              style="--fa-animation-duration: 2s"
+            ></i>
+          </a>
+          <a
+            href="https://github.com/Anilatta"
+            target="_blank"
+            title="GitHub Profile"
+          >
+            <i
+              class="fa-brands fa-square-github fa-beat"
+              style="--fa-animation-duration: 2s"
+            ></i>
+          </a>
+          <a
+            href="https://www.shecodes.io/graduates/43890"
+            target="_blank"
+            title="SheCodes Profile"
+          >
+            <i
+              class="fa-solid fa-id-card fa-beat"
+              style="--fa-animation-duration: 2s"
+            ></i>
+          </a>
+        </div>
+        <p>
+          🌟This project was coded by Talina Dzhavakhadze, and it is
+          <a
+            href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"
+            class="text-decoration-none"
+            target="_blank"
+            >open-sourced</a
+          >.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
