--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact me</title>
+      <meta
+      name="description"
+      content="Contact Talina Dzhavakhadze- a front-end developer based in Munich, DE."
+    />
+    <title>Contact me-TD</title>
     <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -81,11 +85,29 @@
         <a href="mailto:anilatta19@gmail.com" class="email-link">
           Talina Dzhavakhadze
         </a>
-        <br />
+             <footer>
+          <div class="contact-box justify-content-between d-none d-md-flex">
+            <div>
+            <h1 >Work Inquiry:</h1>
+                    <h3>Let's work together!</h3>
+            </div>
+            <div class="mt-4">
+            <a href="/contact.html" class="primary-link-button"title="Contact Talina">Contact me</a>
+            </div>
+          </div>
+          <a href="mailto:anilatta19@gmail.com" class="email-link" title="Email Talina">anilatta19@gmail.com</a>
         
-        <a href="https://www.linkedin.com/in/talina-dzhavakhadze-6aa3ba4/" target="_blank"><i class="fa-brands fa-linkedin"></i>
+          <div class="social-links-contact mt-5 mb-5">
+        <a href="https://www.linkedin.com/in/talina-dzhavakhadze-6aa3ba4/" target="_blank"title="LinkedIn Profile"><i class="fab fa-linkedin"></i>
             </a>
-                
-      </div>
+            <a href="https://github.com/Anilatta" target="_blank"title="GitHub Profile">
+            <i class="fab fa-square-github"></i>
+            </a>
+              <a href="https://www.shecodes.io/graduates/43890" target="_blank"title="SheCodes Profile">
+            <i class="fa-solid fa-user-secret"></i>
+            </a>
+            </div> 
+            <p>🌟This project was coded by Talina Dzhavakhadze, and it is <a href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"class="text-decoration-none"target="_blank">open-sourced</a>.</p>
+        </footer>
 </body>
 </html>
