--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description"content="Talina is a front-end developer based in Munich, DE">
+    <meta name="description"content="Talina - a front-end developer based in Munich, DE.">
     <title>Front-end developer-Talina Dzhavakhadze</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&family=Roboto+Mono:ital,wght@1,500&family=Rubik+Moonrocks&display=swap"
@@ -175,7 +175,7 @@
             <i class="fa-solid fa-id-card fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;"></i>
             </a>
             </div> 
-            <p>This project was coded by Talina Dzhavakhadze, and it is <a href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"class="text-decoration-none"target="_blank">open-sourced</a>.</p>
+            <p>🌟This project was coded by Talina Dzhavakhadze, and it is <a href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"class="text-decoration-none"target="_blank">open-sourced</a>.</p>
         </footer>
       </div>
   </body>
