--- a/work.html
+++ b/work.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My works</title>
+      <meta
+      name="description"
+      content="Works of Talina Dzhavakhadze- a front-end developer based in Munich, DE."
+    />
+    <title>My works-TD</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&family=Roboto+Mono:ital,wght@1,500&family=Rubik+Moonrocks&display=swap"
       rel="stylesheet"
@@ -73,21 +77,21 @@
       <div class="work-container">
 <div class="row">
      <div class="col mt-4 mb-4">
-            <img src="/images/Stand with Ukraine.png" class="img-fluid mb-3 rounded" alt="">
+            <img src="/images/Stand with Ukraine.png" class="img-fluid mb-3 rounded" alt="Stand with Ukraine preview">
             <h3 class="text-center m-0">Stand with Ukraine Project</h3>
             <p class="skills ">Built with HTML and CSS</p>
           </div>
            </div>
            <div class="row">
                     <div class="col-md-6 mb-4">
-            <img src="/images/weather1.png" class="img-fluid mb-3 rounded" alt="">
+            <img src="/images/weather1.png" class="img-fluid mb-3 rounded" alt="Weather Project 1">
             <h3 class="text-center m-0">Weather1 Project</h3>
             <p class="skills ">
               Built with HTML, CSS and JavaScript
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="/images/weather2.png" class="img-fluid mb-3 rounded" alt="">
+            <img src="/images/weather2.png" class="img-fluid mb-3 rounded" alt="Weather Project 1">
             <h3 class="text-center m-0">Weather2 Project</h3>
             <p class="skills" >
               Built with HTML, CSS and JavaScript.
@@ -95,6 +99,30 @@
           </div>
                    </div>
         </div>
+        <footer>
+          <div class="contact-box justify-content-between d-none d-md-flex">
+            <div>
+            <h1 >Work Inquiry:</h1>
+                    <h3>Let's work together!</h3>
+            </div>
+            <div class="mt-4">
+            <a href="/contact.html" class="primary-link-button"title="Contact Talina">Contact me</a>
+            </div>
+          </div>
+          <a href="mailto:anilatta19@gmail.com" class="email-link" title="Email Talina">anilatta19@gmail.com</a>
+        
+          <div class="social-links mt-5 mb-5">
+        <a href="https://www.linkedin.com/in/talina-dzhavakhadze-6aa3ba4/" target="_blank"title="LinkedIn Profile"><i class="fa-brands fa-linkedin fa-flip" style="--fa-flip-x: 1; --fa-flip-y: 0;"></i>
+            </a>
+            <a href="https://github.com/Anilatta" target="_blank"title="GitHub Profile">
+            <i class="fa-brands fa-square-github fa-flip" style="--fa-flip-x: 1; --fa-flip-y: 0;"></i>
+            </a>
+              <a href="https://www.shecodes.io/graduates/43890" target="_blank"title="SheCodes Profile">
+            <i class="fa-solid fa-id-card fa-flip" style="--fa-flip-x: 1; --fa-flip-y: 0;"></i>
+            </a>
+            </div> 
+            <p>🌟This project was coded by Talina Dzhavakhadze, and it is <a href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"class="text-decoration-none"target="_blank">open-sourced</a>.</p>
+        </footer>
         </div>
   </body>
 </html>
