--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
         <div class="contact-box justify-content-between d-none d-md-flex">
           <div>
             <h1>Work Inquiry:</h1>
-            <h3>Let's work together!</h3>
+            <h3>Let's work together! I'm open to the work propositions.</h3>
           </div>
           <div class="mt-4">
             <a
