--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             
           </div>
           <div class="mt-5">
-            <a href="https://www.shecodes.io/workshops/shecodes-basics-10887242-fccf-4e21-a8f0-5bb9ea3f83ab/projects/875568" class="primary-link-button">Learn more</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-basics-10887242-fccf-4e21-a8f0-5bb9ea3f83ab/projects/875568" class="primary-link-button"title="Stand with Ukraine project">Learn more</a>
           </div>
         </div>
         <div class="col-md-6">
@@ -119,7 +119,7 @@
             The Weather application provides the following data of the searched city: weather conditions, relative humidity, temperature in different unites, wind speed and in addition to these six days temperature in Celsius weather forecast.
           </p>
           <div class="mt-5">
-            <a href="https://legendary-flan-faa441.netlify.app/" class="primary-link-button">Learn more</a>
+            <a href="https://legendary-flan-faa441.netlify.app/" class="primary-link-button" title="Weather app1 project">Learn more</a>
           </div>
         </div>
         <div class="col-md-6">
@@ -150,7 +150,7 @@
             The Weather application provides the following data of the searched or current location: weather conditions, relative humidity, temperature in different unites, wind speed and in addition to these six days temperature in Celsius weather forecast.
           </p>
           <div class="mt-5 mb-5">
-            <a href="https://www.shecodes.io/workshops/shecodes-plus-afd1858a-f840-4006-9a92-1489118b59b9/projects/1002111" class="primary-link-button">Learn more</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-plus-afd1858a-f840-4006-9a92-1489118b59b9/projects/1002111" class="primary-link-button"title="Weather app2 project">Learn more</a>
           </div>
         </div>
         <footer>
