--- a/work.html
+++ b/work.html
@@ -103,7 +103,7 @@
           <div class="contact-box justify-content-between d-none d-md-flex">
             <div>
             <h1 >Work Inquiry:</h1>
-                    <h3>Let's work together! I'm open to the work propositions.</h3>
+                    <h3>Let's work and code together!</h3>
             </div>
             <div class="mt-4">
             <a href="/contact.html" class="primary-link-button"title="Contact Talina">Contact me</a>
