--- a/work.html
+++ b/work.html
@@ -121,7 +121,15 @@
             <i class="fa-solid fa-id-card fa-flip" style="--fa-flip-x: 1; --fa-flip-y: 0;"></i>
             </a>
             </div> 
-            <p>🌟This project was coded by Talina Dzhavakhadze, and it is <a href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"class="text-decoration-none"target="_blank">open-sourced</a>.</p>
+           <p>
+          🌟This project was coded by Talina Dzhavakhadze, and it is
+          <a
+            href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"
+            class="text-decoration-none"
+            target="_blank"
+            >open-sourced</a
+          >.
+        </p>
         </footer>
         </div>
   </body>
