making site responsive

--- a/about.html
+++ b/about.html
@@ -125,16 +125,18 @@
             alt="Learned at SheCodes"
           />
         </p>
-        <p>
-          Languages we can communicate🔊
-          <br />
-          Native or bilingual proficiency: Ukrainian,Russian.
-          <br />
-          Professional working proficiency: English.
-          <br />
-          Elementary proficiency: German,Bulgarian,Czech.
-          <br />
-        </p>
+        <div class="d-none d-md-flex">
+          <p>
+            Languages we can communicate🔊
+            <br />
+            Native or bilingual proficiency: Ukrainian,Russian.
+            <br />
+            Professional working proficiency: English.
+            <br />
+            Elementary proficiency: German,Bulgarian,Czech.
+            <br />
+          </p>
+        </div>
       </div>
       <div class="contact" id="contact">
         <h2>📮 Contact me</h2>
