--- a/contact.html
+++ b/contact.html
@@ -75,11 +75,7 @@
           Let's get in touch!
         </h>
          <div class="contact" id="contact">
-        <h2>📮 E-mail me: anilatta19@gmail.com</h2>
-        <a href="mailto:anilatta19@gmail.com" class="email-link">
-          Talina Dzhavakhadze
-        </a>
-             <footer>
+                             <footer>
           <div class="contact-box justify-content-between d-none d-md-flex">
             <div>
             <h1 >Work Inquiry:</h1>
@@ -88,8 +84,9 @@
             <div class="mt-4">
             <a href="/contact.html" class="primary-link-button"title="Contact Talina">Contact me</a>
             </div>
+            
           </div>
-          <a href="mailto:anilatta19@gmail.com" class="email-link" title="Email Talina">anilatta19@gmail.com</a>
+          <a href="mailto:anilatta19@gmail.com" class="email-link" title="Email Talina">📮anilatta19@gmail.com</a>
         
           <div class="social-links-contact mt-5 mb-5">
         <a href="https://www.linkedin.com/in/talina-dzhavakhadze-6aa3ba4/" target="_blank"title="LinkedIn Profile"><i class="fab fa-linkedin"></i>
@@ -101,7 +98,8 @@
             <i class="fa-solid fa-user-secret"></i>
             </a>
             </div> 
-            <p>🌟This project was coded by Talina Dzhavakhadze, and it is <a href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"class="text-decoration-none"target="_blank">open-sourced</a>.</p>
+            <p class="work-footer">🌟This project was coded by Talina Dzhavakhadze, and it is <a href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"class="text-decoration-none"target="_blank">open-sourced</a>.</p>
         </footer>
+         </div>
 </body>
 </html>
