--- a/work.html
+++ b/work.html
@@ -121,7 +121,7 @@
             <i class="fa-solid fa-id-card fa-flip" style="--fa-flip-x: 1; --fa-flip-y: 0;"></i>
             </a>
             </div> 
-           <p>
+           <p class="work-footer">
           🌟This project was coded by Talina Dzhavakhadze, and it is
           <a
             href="https://github.com/Anilatta/Portfolio-Talina-Dzhavakhadze"
@@ -132,5 +132,5 @@
         </p>
         </footer>
         </div>
-  </body>
+          </body>
 </html>
